# dockrs

./: Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: check.yml  test.yml
src/: cli.rs  lib.rs  list.rs  main.rs  mock.rs  stats.rs
