[package]
name = "dockrs"
description = "A CLI for interacting with a Docker daemon"
version = "0.1.0"
edition = "2021"
license = "MIT or APACHE-2.0"
repository = "https://github.com/joshuachp/dockrs"
keywords = ["docker", "cli"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.4"
color-eyre = "0.6.2"
complete = "0.0.1"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
