[package]
name = "dockrs"
description = "A CLI for interacting with a Docker daemon"
version = "0.1.0"
edition = "2021"
license = "MIT or APACHE-2.0"
repository = "https://github.com/joshuachp/dockrs"
keywords = ["docker", "cli"]
categories = ["command-line-interface"]

[lib]
name = "dockrs"
path = "src/lib.rs"

[[bin]]
name = "dockrs"
path = "src/main.rs"

[dependencies]
bollard = "0.14.0"
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.4"
color-eyre = "0.6.2"
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
mockall = {version = "0.11.3", optional = true}
async-trait = "0.1.66"
pretty_assertions = "1.3.0"
hyper = {version = "0.14.25", optional = true}

[features]
default = ["mock"]
mock =["mockall", "hyper"]

[dev-dependencies]
