[package]
name = "dockrs"
description = "A CLI for interacting with a Docker daemon"
version = "0.1.0"
edition = "2021"
license = "MIT or APACHE-2.0"
repository = "https://github.com/joshuachp/dockrs"
keywords = ["docker", "cli"]
categories = ["command-line-interface"]

[lib]
name = "dockrs"
path = "src/lib.rs"

[[bin]]
name = "dockrs"
path = "src/main.rs"

[dependencies]
bollard = {version = "0.14.0", features = ["chrono"] }
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.2.1"
color-eyre = "0.6.2"
crossterm = "0.26.1"
futures = "0.3.28"
prettytable-rs = "0.10.0"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
mockall = {version = "0.11.4", optional = true}
async-trait = "0.1.68"
pretty_assertions = "1.3.0"
hyper = {version = "0.14.26", optional = true}

[features]
mock =["mockall", "hyper"]

[dev-dependencies]
